[tool.poetry]
name = "cdreader"
version = "0.1.0"
description = ""
authors = ["Ryan Apfel <rasapfel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydicom = "^2.4.1"
tqdm = "^4.65.0"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
cdreader = "cdreader.app:main"